# SwiftRides-FrontEnd

./: App.qml  CMakeLists.txt  Main.qml  main.cpp
assets/: icons-images.qrc
initialization-auth/: LoginScreen.qml  SignUp.qml  SplashScreen.qml
passenger/: PassengerScreen.qml
